--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ $border-radius : 7px;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+@import "node_modules/animate.css/animate.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;500;600&family=Montserrat:wght@300;500;700&family=Padauk&family=Space+Grotesk:wght@300;500;600;700&display=swap');
 *{
   margin: 0;
@@ -28,7 +29,7 @@ body{
   background: #f1f4f8;
   height: 100px;
   width: 101%;
-  margin-top: -30px;
+  margin-top: -50px;
   content: "";
   -webkit-transform: rotate(357deg);
   display: inline-block;
