--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,28 @@ $border-radius : 7px;
 body{
   overflow-x: hidden;
 }
+.toggle-mb-btn-nav{
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: #fb383800;
+  border: 1px solid #335eea;
+  border-radius: 7px;
+  transition: box-shadow 0.15s ease-in-out;
+}
+.toggle-mb-btn-icon{
+  color: #335eea;
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
 .Deg::before{
   background: #f1f4f8;
-  height: 100px;
+  height: 200px;
   width: 101%;
   margin-top: -50px;
   content: "";
@@ -46,6 +65,14 @@ body{
   display: inline-block;
   z-index: 1;
   position: absolute;
+}
+.double-card1{
+  margin-top: -280px;
+  z-index: 10020;
+}
+.double-card2{
+  height: 500px;
+  margin-top: -230px;
 }
 
 p{
@@ -78,7 +105,6 @@ p{
   right: -30px;
   z-index: 10010;
   overflow: visible;
-
 }
 .carousel-btn-prev{
   display: flex;
@@ -95,9 +121,58 @@ p{
   left: -30px;
   z-index: 10010;
   overflow: visible;
-
 }
-
-
-
-
+.carousel-btn-prev-for-mobile{
+ display: none;
+}
+.Carousel-double{
+  margin-bottom: -20px;
+}
+.deskkit-section{
+  margin: 120px 0;
+}
+.hero-btn-hover:hover{
+  transform: translate3d(0,-3px,0);
+  box-shadow: 0 2px 10px gray;
+  transition: 0.5s;
+}
+@media (max-width: 420px) {
+  .double-card1{
+    margin-top: -250px;
+    z-index: 10020;
+    margin-bottom: 20px;
+  }
+  .double-card2{
+    height: 500px;
+    margin-top: 0;
+  }
+  .Deg::before{
+  display: none;
+  }
+  .Deg2::before{
+    display: none;
+  }
+  .carousel-btn-next{
+    position: absolute;
+    right: -10px;
+  }
+  .carousel-btn-prev{
+    display: none;
+  }
+  .carousel-btn-prev-for-mobile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #335eea;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50%;
+    top: 45%;
+    left: -10px;
+    z-index: 10010;
+    overflow: visible;
+  }
+}
